Alfa página web Librali
Mejor diseño, primeros juegos

--- a/Index.html
+++ b/Index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Styles.css">
-    <link rel="shortcut icon" type="imagex-icon" href="Recursos/Icono_Provisional.ico">
+    <link rel="shortcut icon" type="imagex-icon" href="Recursos/LogoItzel.ico">
     <title>Librali</title>
 </head>
 <body>
     
     <div class="Logo">
-        <img src="Recursos/Logo_provisional.png" width="425.5" height="157.5">
+        <img src="Recursos/Baner.png">
     </div>
     
     <div class="container">
@@ -51,39 +51,43 @@
         <h2>Todos los juegos</h2>
     </div>
 
+    <!--Leer y contestar -->
     <div class="BibliotecaJuegos">
         <div class="juego">
-            <img src="Recursos/J1.png">
+            <a href="PaginasJuegos/LeerYContestar.html"><img src="Recursos/J1.png"></a>
         </div>
         <div class="pie">
-            <p>Juego 1</p>
+            <p>Leer y contestar</p>
         </div>  
     </div>
 
+    <!--Memorama -->
     <div class="BibliotecaJuegos">
         <div class="juego">
-            <img src="Recursos/J2.png">
+            <a href="PaginasJuegos/Memorama.html"><img src="Recursos/J2.png"></a>
         </div>
         <div class="pie">
-            <p>Juego 2</p>
+            <p>Memorama</p>
         </div>  
     </div>
 
+    <!--Sopa de letras -->
     <div class="BibliotecaJuegos">
         <div class="juego">
-            <img src="Recursos/J3.png">
+            <a href="PaginasJuegos/SopaDeLetras.html"><img src="Recursos/J3.png" href="Juego.html"></a>
         </div>
         <div class="pie">
-            <p>Juego 3</p>
+            <p>Sopa de letras</p>
         </div>  
     </div>
 
+    <!--Completar el texto -->
     <div class="BibliotecaJuegos">
         <div class="juego">
-            <img src="Recursos/J4.png">
+            <a href="PaginasJuegos/CompletarTexto.html"><img src="Recursos/J4.png"></a>
         </div>
         <div class="pie">
-            <p>Juego 4</p>
+            <p>Completar el texto</p>
         </div>  
     </div>
 
